data/all_generated_tests/raw_wast_tests/call_InfiniteLoops_3392.wast
;; 1. **Test Description**: Create a loop that calls a function with a `br_if` condition that should exit the loop if a global variable hits a certain threshold. The global variable is incremented inside the function. Test to see if the loop exits correctly based on the threshold condition.    - **Constraint**: Proper handling of function calls within the loop and correct condition evaluation with `br_if`.    - **Infinite Loop Relation**: If `br_if` condition fails due to improper function call handling, the loop may never exit.

(assert_invalid
  (module
    (global $counter (mut i32) (i32.const 0))
    (func $increment-counter
      (global.set $counter (i32.add (global.get $counter) (i32.const 1)))
    )
    (func $loop (param $threshold i32)
      (loop $loop
        (call $increment-counter)
        (br_if $loop (i32.lt_s (global.get $counter) (local.get $threshold)))
      )
    )
    (func (call $loop (i32.const 10)))
  )
  "type mismatch"
)